--- a/src/main/resources/assets/subpocket/lang/en_us.lang
+++ b/src/main/resources/assets/subpocket/lang/en_us.lang
@@ -16,7 +16,7 @@ item.subpocket:key.desc=§oStrange and extremely rare artifact from an unknown d
 gui.subpocket:it.quantity=§7╘ quantity: §o%s
 
 
-popup.subpocket:blocked_ender_chest=Your soul's Ender Link was consumed by the Subpocket Link, you are free...
+popup.subpocket:blocked_ender_chest=The Ender Link of your soul was dissolved, you are free...
 
 
 command.subpocket:meta.usage=/subpocket <subcommand> [args...]
@@ -49,7 +49,7 @@ command.subpocket:unlock.success=Unlocked subpocket of player %s
 command.subpocket:unlock.failure=Player %s already had the subpocket unlocked
 
 command.subpocket:lock.usage=/subpocket lock <player>
-command.subpocket:lock.desc=Locks the subpocket of given plater
+command.subpocket:lock.desc=Locks the subpocket of given player
 command.subpocket:lock.success=Locked subpocket of player %s
 command.subpocket:lock.failure=Player %s already had the subpocket unlocked
 
